<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Join &amp; Play</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hint_pesq1">Escolha o esporte</string>
    <string name="hint_pesq2">Endereço do local</string>
    <string name="local">Local</string>
    <string name="data">Data</string>
    <string name="inicio">A partir de</string>
    <string name="data_default">12 a 15</string>
    <string name="time_default">12:00</string>
    <string name="mes_default">Maio</string>
    <string name="pago">Eventos pagos</string>
    <string name="sim">Sim</string>
    <string name = "nao">Não</string>

</resources>